--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tensor-calc"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "World's first Rust-based Einstein field equation solver with symbolic tensor calculus"
 license = "MIT OR Apache-2.0"
@@ -11,6 +11,14 @@ keywords = ["physics", "tensor", "einstein", "relativity", "spacetime"]
 categories = ["science", "mathematics", "command-line-utilities"]
 authors = ["nightness"]
 readme = "README.md"
+
+[[bin]]
+name = "tensor-calc"
+path = "src/main.rs"
+
+[lib]
+name = "tensor_calc"
+path = "src/lib.rs"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
